--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "react-dom": "^18.3.1",
     "firebase": "^10.8.0",
     "react-router-dom": "^6.22.1",
-    "clsx": "^2.1.0"
+    "clsx": "^2.1.0",
+    "qrcode": "^1.5.3",
+    "html5-qrcode": "^2.3.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/qrcode": "^1.5.5",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
