--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^5.7.0",
+    "@capacitor/app": "^5.0.7",
+    "@capacitor/camera": "^5.0.9",
+    "@capacitor/core": "^5.7.0",
+    "@capacitor/filesystem": "^5.2.1",
+    "@capacitor/ios": "^5.7.0",
+    "@capacitor/keyboard": "^5.0.8",
+    "@capacitor/network": "^5.0.7",
+    "@capacitor/status-bar": "^5.0.7",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -20,6 +29,7 @@
     "html5-qrcode": "^2.3.8"
   },
   "devDependencies": {
+    "@capacitor/cli": "^5.7.0",
     "@eslint/js": "^9.9.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.3.5",
