--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor/ios": "^5.7.0",
     "@capacitor/keyboard": "^5.0.8",
     "@capacitor/network": "^5.0.7",
+    "@capacitor/push-notifications": "^5.1.0",
     "@capacitor/status-bar": "^5.0.7",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
