--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/filesystem": "^5.2.1",
     "@capacitor/ios": "^5.7.0",
     "@capacitor/keyboard": "^5.0.8",
+    "@capacitor/local-notifications": "^5.0.7",
     "@capacitor/network": "^5.0.7",
     "@capacitor/push-notifications": "^5.1.0",
     "@capacitor/status-bar": "^5.0.7",
