--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/local-notifications": "^5.0.7",
     "@capacitor/network": "^5.0.7",
     "@capacitor/push-notifications": "^5.1.0",
+    "@capacitor/share": "^5.0.7",
     "@capacitor/status-bar": "^5.0.7",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
