--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/push-notifications": "^5.1.0",
     "@capacitor/share": "^5.0.7",
     "@capacitor/status-bar": "^5.0.7",
+    "@ionic/react": "^7.7.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
