--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@capacitor/keyboard": "^5.0.8",
     "@capacitor/local-notifications": "^5.0.7",
     "@capacitor/network": "^5.0.7",
+    "@capacitor/preferences": "^5.0.0",
     "@capacitor/push-notifications": "^5.1.0",
     "@capacitor/share": "^5.0.7",
     "@capacitor/status-bar": "^5.0.7",
